# BioSim

./: README.md
BioSim_G23_Ivan/: README.md
BioSim_G23_Ivan/BioSim_G23_Ivan/: Documentation, Modelling the Ecosystem of Rossumøya.docx  setup.cfg
BioSim_G23_Ivan/BioSim_G23_Ivan/documentation project/: conf.py  discussion.rst  introduction.rst
BioSim_G23_Ivan/BioSim_G23_Ivan/documentation project/_build/doctrees/: abstract.doctree  background.doctree  discussion.doctree  environment.pickle  index.doctree  introduction.doctree  method.doctree  results.doctree  sources.doctree
BioSim_G23_Ivan/BioSim_G23_Ivan/documentation project/_build/html/: abstract.html  background.html  discussion.html  genindex.html  index.html  introduction.html  method.html  objects.inv  results.html  search.html  searchindex.js  sources.html
BioSim_G23_Ivan/BioSim_G23_Ivan/documentation project/_build/html/_sources/: abstract.rst.txt  background.rst.txt  index.rst.txt  method.rst.txt  results.rst.txt  sources.rst.txt
BioSim_G23_Ivan/BioSim_G23_Ivan/documentation project/_templates/: globaltoc.html
BioSim_G23_Ivan/BioSim_G23_Ivan/src/biosim/: __init__.py  animals.py  island.py  landscape.py  simulation.py
